[gd_scene load_steps=6 format=3 uid="uid://clbjx5y6mj4la"]

[ext_resource type="PackedScene" uid="uid://67ohqgorddin" path="res://Objects/Background.tscn" id="1_kw3tc"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_oa7vy"]
[ext_resource type="Theme" uid="uid://dvxg1y76ows4c" path="res://UI/MainTheme.tres" id="2_7w150"]
[ext_resource type="TileSet" uid="uid://d0jjl3a80btdd" path="res://TileSets/TileSet.tres" id="3_j51uw"]
[ext_resource type="PackedScene" uid="uid://cgdmbasimfie4" path="res://Objects/ShadowGradient.tscn" id="5_1auof"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_oa7vy")
level_paths = Array[String](["res://Levels/Level_0.tscn", "res://Levels/Level_1.tscn", "", "", "", "", "", "", ""])

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" parent="." instance=ExtResource("1_kw3tc")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_j51uw")
format = 2
layer_0/tile_data = PackedInt32Array(327671, 131072, 0, 327672, 131072, 0, 327673, 131072, 0, 327674, 131072, 0, 327675, 131072, 0, 327676, 131072, 0, 327677, 131072, 0, 327678, 131072, 0, 327679, 131072, 0, 262144, 131072, 0, 262145, 131072, 0, 262146, 131072, 0, 262147, 131072, 0, 262148, 131072, 0, 262149, 131072, 0, 262150, 131072, 0, 262151, 131072, 0, 262152, 131072, 0, 327670, 65536, 1, 262153, 196608, 1, 393206, 65536, 2, 458742, 65536, 2, 524278, 65536, 2, 589814, 65536, 2, 655350, 65536, 2, 720886, 65536, 2, 786422, 65536, 2, 851958, 65536, 2, 917494, 65536, 2, 983030, 65536, 2, 1048566, 65536, 2, 1114102, 65536, 2, 1179638, 65536, 2, 1245174, 65536, 2, 1310710, 65536, 2, 1376246, 65536, 2, 1441782, 65536, 2, 1507318, 65536, 2, 1572854, 65536, 2, 327689, 196608, 2, 393225, 196608, 2, 458761, 196608, 2, 524297, 196608, 2, 589833, 196608, 2, 655369, 196608, 2, 720905, 196608, 2, 786441, 196608, 2, 851977, 196608, 2, 917513, 196608, 2, 983049, 196608, 2, 1048585, 196608, 2, 1114121, 196608, 2, 1179657, 196608, 2, 1245193, 196608, 2, 1310729, 196608, 2, 1376265, 196608, 2, 1441801, 196608, 2, 1507337, 196608, 2, 393207, 131072, 1, 458743, 131072, 1, 524279, 131072, 1, 589815, 131072, 1, 655351, 131072, 1, 720887, 131072, 1, 786423, 131072, 1, 851959, 131072, 1, 917495, 131072, 1, 983031, 131072, 1, 1048567, 131072, 1, 1114103, 131072, 1, 1179639, 131072, 1, 1245175, 131072, 1, 1310711, 131072, 1, 1376247, 131072, 1, 1441783, 131072, 1, 1507319, 131072, 1, 1572855, 131072, 1, 393208, 131072, 1, 458744, 131072, 1, 524280, 131072, 2, 589816, 131072, 1, 655352, 131072, 1, 720888, 131072, 1, 786424, 131072, 2, 851960, 131072, 1, 917496, 131072, 1, 983032, 131072, 1, 1048568, 131072, 2, 1114104, 131072, 1, 1179640, 131072, 1, 1245176, 131072, 1, 1310712, 131072, 2, 1376248, 131072, 1, 1441784, 131072, 1, 1507320, 131072, 1, 1572856, 131072, 1, 393209, 131072, 1, 458745, 131072, 1, 524281, 131072, 1, 589817, 131072, 1, 655353, 131072, 1, 720889, 131072, 1, 786425, 131072, 1, 851961, 131072, 1, 917497, 131072, 1, 983033, 131072, 1, 1048569, 131072, 1, 1114105, 131072, 1, 1179641, 131072, 1, 1245177, 131072, 1, 1310713, 131072, 1, 1376249, 131072, 1, 1441785, 131072, 1, 1507321, 131072, 1, 1572857, 131072, 1, 393210, 131072, 1, 458746, 131072, 1, 524282, 131072, 1, 589818, 131072, 1, 655354, 131072, 1, 720890, 131072, 1, 786426, 131072, 1, 851962, 131072, 1, 917498, 131072, 1, 983034, 131072, 1, 1048570, 131072, 1, 1114106, 131072, 1, 1179642, 131072, 1, 1245178, 131072, 1, 1310714, 131072, 1, 1376250, 131072, 1, 1441786, 131072, 1, 1507322, 131072, 1, 1572858, 131072, 1, 393211, 131072, 1, 458747, 131072, 1, 524283, 131072, 1, 589819, 131072, 1, 655355, 131072, 1, 720891, 131072, 1, 786427, 131072, 1, 851963, 131072, 1, 917499, 131072, 1, 983035, 131072, 1, 1048571, 131072, 1, 1114107, 131072, 1, 1179643, 131072, 1, 1245179, 131072, 1, 1310715, 131072, 1, 1376251, 131072, 1, 1441787, 131072, 1, 1507323, 131072, 1, 1572859, 131072, 1, 393212, 131072, 1, 458748, 131072, 1, 524284, 131072, 1, 589820, 131072, 1, 655356, 131072, 1, 720892, 131072, 1, 786428, 131072, 1, 851964, 131072, 1, 917500, 131072, 1, 983036, 131072, 1, 1048572, 131072, 1, 1114108, 131072, 1, 1179644, 131072, 1, 1245180, 131072, 1, 1310716, 131072, 1, 1376252, 131072, 1, 1441788, 131072, 1, 1507324, 131072, 1, 1572860, 131072, 1, 393213, 131072, 1, 458749, 131072, 1, 524285, 131072, 2, 589821, 131072, 1, 655357, 131072, 1, 720893, 131072, 1, 786429, 131072, 2, 851965, 131072, 1, 917501, 131072, 1, 983037, 131072, 1, 1048573, 131072, 2, 1114109, 131072, 1, 1179645, 131072, 1, 1245181, 131072, 1, 1310717, 131072, 2, 1376253, 131072, 1, 1441789, 131072, 1, 1507325, 131072, 1, 1572861, 131072, 1, 393214, 131072, 1, 458750, 131072, 1, 524286, 131072, 1, 1441790, 131072, 1, 1507326, 131072, 1, 1572862, 131072, 1, 393215, 131072, 1, 458751, 131072, 1, 524287, 131072, 1, 1441791, 131072, 1, 1507327, 131072, 1, 1572863, 131072, 1, 327680, 131072, 1, 393216, 131072, 1, 458752, 131072, 1, 1376256, 131072, 1, 1441792, 131072, 1, 1507328, 131072, 1, 327681, 131072, 1, 393217, 131072, 1, 458753, 131072, 1, 1376257, 131072, 1, 1441793, 131072, 1, 1507329, 131072, 1, 327682, 131072, 1, 393218, 131072, 1, 458754, 131072, 2, 524290, 131072, 1, 589826, 131072, 1, 655362, 131072, 1, 720898, 131072, 2, 786434, 131072, 1, 851970, 131072, 1, 917506, 131072, 1, 983042, 131072, 2, 1048578, 131072, 1, 1114114, 131072, 1, 1179650, 131072, 1, 1245186, 131072, 2, 1310722, 131072, 1, 1376258, 131072, 1, 1441794, 131072, 1, 1507330, 131072, 1, 327683, 131072, 1, 393219, 131072, 1, 1310723, 131072, 1, 1376259, 131072, 1, 1441795, 131072, 1, 1507331, 131072, 1, 327684, 131072, 1, 393220, 131072, 1, 1310724, 131072, 1, 1376260, 131072, 1, 1441796, 131072, 1, 1507332, 131072, 1, 327685, 131072, 1, 393221, 131072, 1, 1310725, 131072, 1, 1376261, 131072, 1, 1441797, 131072, 1, 1507333, 131072, 1, 327686, 131072, 1, 393222, 131072, 1, 1310726, 131072, 1, 1376262, 131072, 1, 1441798, 131072, 1, 1507334, 131072, 1, 327687, 131072, 1, 393223, 131072, 1, 1310727, 131072, 1, 1376263, 131072, 1, 1441799, 131072, 1, 1507335, 131072, 1, 327688, 131072, 1, 393224, 131072, 1, 1310728, 131072, 1, 1376264, 131072, 1, 1441800, 131072, 1, 1507336, 131072, 1, 458755, 131072, 1, 524291, 131072, 1, 589827, 131072, 1, 655363, 131072, 1, 720899, 131072, 1, 786435, 131072, 1, 851971, 131072, 1, 917507, 131072, 1, 983043, 131072, 1, 1048579, 131072, 1, 1114115, 131072, 1, 1179651, 131072, 1, 1245187, 131072, 1, 458756, 131072, 1, 524292, 131072, 1, 589828, 131072, 1, 655364, 131072, 1, 720900, 131072, 1, 786436, 131072, 1, 851972, 131072, 1, 917508, 131072, 1, 983044, 131072, 1, 1048580, 131072, 1, 1114116, 131072, 1, 1179652, 131072, 1, 1245188, 131072, 1, 458757, 131072, 1, 524293, 131072, 1, 589829, 131072, 1, 655365, 131072, 1, 720901, 131072, 1, 786437, 131072, 1, 851973, 131072, 1, 917509, 131072, 1, 983045, 131072, 1, 1048581, 131072, 1, 1114117, 131072, 1, 1179653, 131072, 1, 1245189, 131072, 1, 458758, 131072, 1, 524294, 131072, 1, 589830, 131072, 1, 655366, 131072, 1, 720902, 131072, 1, 786438, 131072, 1, 851974, 131072, 1, 917510, 131072, 1, 983046, 131072, 1, 1048582, 131072, 1, 1114118, 131072, 1, 1179654, 131072, 1, 1245190, 131072, 1, 458759, 131072, 2, 524295, 131072, 1, 589831, 131072, 1, 655367, 131072, 1, 720903, 131072, 2, 786439, 131072, 1, 851975, 131072, 1, 917511, 131072, 1, 983047, 131072, 2, 1048583, 131072, 1, 1114119, 131072, 1, 1179655, 131072, 1, 1245191, 131072, 2, 983048, 131072, 1, 917512, 131072, 1, 851976, 131072, 1, 786440, 131072, 1, 720904, 131072, 1, 655368, 131072, 1, 589832, 131072, 1, 524296, 131072, 1, 458760, 131072, 1, 1048584, 131072, 1, 1114120, 131072, 1, 1179656, 131072, 1, 1245192, 131072, 1, 589822, 131072, 4, 589823, 131072, 4, 524288, 131072, 4, 524289, 131072, 4, 1310718, 131072, 0, 1310719, 131072, 0, 1245184, 131072, 0, 1245185, 131072, 0, 1376254, 131072, 1, 1376255, 131072, 1, 1310720, 131072, 1, 1310721, 131072, 1, 655358, 131072, 3, 720894, 131072, 3, 786430, 131072, 3, 851966, 131072, 3, 917502, 131072, 3, 983038, 131072, 3, 1048574, 131072, 3, 1114110, 131072, 3, 1179646, 131072, 3, 1245182, 131072, 3, 589825, 131072, 3, 655361, 131072, 3, 720897, 131072, 3, 786433, 131072, 3, 851969, 131072, 3, 917505, 131072, 3, 983041, 131072, 3, 1048577, 131072, 3, 1114113, 131072, 3, 1179649, 131072, 3)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -72.0
offset_right = 160.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.666667, 0.470588, 0.345098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "BBD-MK0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_7w150")
alignment = 1

[node name="StartButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Quit"

[node name="Label2" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = 56.0
offset_right = 160.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Controller is highly recommended."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 144.0
offset_right = 32.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="LevelSelect" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackToMenu" type="Button" parent="ScrollContainer/LevelSelect"]
layout_mode = 2
text = "Back"

[node name="Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 224.0
offset_top = -90.0
offset_right = 544.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7w150")

[node name="PanelContainer" type="PanelContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Settings/PanelContainer"]
layout_mode = 2
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/PanelContainer/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "General"

[node name="BackToMenu" type="Button" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="SpeedrunOption" type="OptionButton" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Speedrun Off"
popup/item_0/id = 0
popup/item_1/text = "Speedrun Level"
popup/item_1/id = 1
popup/item_2/text = "Speedrun Game"
popup/item_2/id = 2

[node name="FullscreenButton" type="CheckButton" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[node name="Label2" type="Label" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Audio"

[node name="Label3" type="Label" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Global:"

[node name="Global" type="HSlider" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
value = 10.0
tick_count = 11

[node name="Label4" type="Label" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "SFX:"

[node name="SFX" type="HSlider" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
value = 10.0
tick_count = 11

[node name="Label5" type="Label" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Music:
"

[node name="Music" type="HSlider" parent="Settings/PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
value = 10.0
tick_count = 11

[node name="MainMenuTarget" type="Node2D" parent="."]

[node name="LevelSelectTarget" type="Node2D" parent="."]
position = Vector2(0, 224)

[node name="OptionsTarget" type="Node2D" parent="."]
position = Vector2(384, 0)

[node name="QuitTarget" type="Node2D" parent="."]
position = Vector2(0, -320)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
rotation = 0.643361
color = Color(0, 0, 0, 1)
range_layer_min = -100
range_layer_max = 1

[node name="CanvasLayer" parent="." instance=ExtResource("5_1auof")]

[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ScrollContainer/LevelSelect/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Settings/PanelContainer/ScrollContainer/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="item_selected" from="Settings/PanelContainer/ScrollContainer/VBoxContainer/SpeedrunOption" to="." method="_on_speedrun_option_item_selected"]
[connection signal="pressed" from="Settings/PanelContainer/ScrollContainer/VBoxContainer/FullscreenButton" to="." method="save_settings"]
[connection signal="changed" from="Settings/PanelContainer/ScrollContainer/VBoxContainer/Global" to="." method="save_settings"]
[connection signal="changed" from="Settings/PanelContainer/ScrollContainer/VBoxContainer/SFX" to="." method="save_settings"]
[connection signal="changed" from="Settings/PanelContainer/ScrollContainer/VBoxContainer/Music" to="." method="save_settings"]
